<resources>
    <string name="app_name">traemefood</string>
    <string name="hint_ingresar_correo">  Ingresa tu correo</string>
    <string name="hint_ingresar_password">  Ingresa tu contraseña</string>
    <string name="btn_iniciar_sesion">Iniciar sesión</string>
    <string name="btn_registro">Regístrate</string>
    <string name="hint_reg_nombre">Ingresa tu(s) nombre(s)</string>
    <string name="hint_reg_apellidos">Ingresa tus apellidos</string>
    <string name="hint_reg_email">Ingresa tu email</string>
    <string name="hint_reg_telefono">Ingresa tu número telefónico</string>
    <string name="hint_reg_password">Ingresa tu contraseña</string>
    <string name="hint_reg_password_conf">Confirma tu contraseña</string>
    <string name="hint_reg_direccion">Ingresa tu dirección</string>
    <string name="btn_registro_enviar">Registrar</string>
    <string name="title_vistarestaurantes_busqueda"> Buscar</string>
    <string name="btn_add">Pagar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">SOCOSAMEX</string>
    <string name="acerca_de">Acerca de</string>
</resources>