<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".sesion.RegistroActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="36dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/carlitobold"
        android:text="Crear nueva cuenta"
        android:textColorHint="#202020"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/etReg_Apellidos"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittextlogin"
        android:drawableStart="@drawable/user"
        android:ems="10"
        android:fontFamily="@font/carlitoregular"
        android:hint="@string/hint_reg_apellidos"
        android:inputType="textPersonName"
        android:padding="@dimen/regBoxesPadding"
        android:textColorHint="#CACFD2"
        android:textSize="@dimen/regTextSize"
        app:layout_constraintBottom_toTopOf="@+id/etReg_Direccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReg_Nombre" />

    <EditText
        android:id="@+id/et_Reg_Telefono"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edittextlogin"
        android:drawableStart="@drawable/phone"
        android:ems="10"
        android:fontFamily="@font/carlitoregular"
        android:hint="@string/hint_reg_telefono"
        android:inputType="textPersonName"
        android:padding="@dimen/regBoxesPadding"
        android:textColorHint="#CACFD2"
        android:textSize="@dimen/regTextSize"
        app:layout_constraintBottom_toTopOf="@+id/btnReg_send"
        app:layout_constraintEnd_toStartOf="@+id/ib_Selectfoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Reg_Password_Conf" />

    <EditText
        android:id="@+id/etReg_Nombre"

        android:layout_width="321dp"
        android:layout_height="60dp"

        android:layout_marginStart="43dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittextlogin"
        android:drawableStart="@drawable/user"
        android:ems="10"
        android:fontFamily="@font/carlitoregular"
        android:hint="@string/hint_reg_nombre"
        android:inputType="textPersonName"
        android:padding="@dimen/regBoxesPadding"
        android:textColorHint="#CACFD2"
        android:textSize="@dimen/regTextSize"
        app:layout_constraintBottom_toTopOf="@+id/etReg_Apellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/et_Reg_Password"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittextlogin"
        android:drawableStart="@drawable/lock"
        android:ems="10"
        android:fontFamily="@font/carlitoregular"
        android:hint="@string/hint_reg_password"
        android:inputType="textPassword"
        android:padding="@dimen/regBoxesPadding"
        android:textColorHint="#CACFD2"
        android:textSize="@dimen/regTextSize"
        app:layout_constraintBottom_toTopOf="@+id/et_Reg_Password_Conf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReg_Email" />

    <EditText
        android:id="@+id/etReg_Email"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittextlogin"
        android:drawableStart="@drawable/ic_baseline_local_post_office_24"
        android:ems="10"
        android:fontFamily="@font/carlitoregular"
        android:hint="@string/hint_reg_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/regBoxesPadding"
        android:textColorHint="#CACFD2"
        android:textSize="@dimen/regTextSize"
        app:layout_constraintBottom_toTopOf="@+id/et_Reg_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReg_Direccion" />

    <EditText
        android:id="@+id/etReg_Direccion"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittextlogin"
        android:drawableStart="@drawable/ic_baseline_local_post_office_24"
        android:ems="10"
        android:fontFamily="@font/carlitoregular"
        android:hint="@string/hint_reg_direccion"
        android:inputType="textEmailAddress"
        android:padding="@dimen/regBoxesPadding"
        android:textColorHint="#CACFD2"
        android:textSize="@dimen/regTextSize"
        app:layout_constraintBottom_toTopOf="@+id/etReg_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReg_Apellidos" />

    <EditText
        android:id="@+id/et_Reg_Password_Conf"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittextlogin"
        android:drawableStart="@drawable/lock"
        android:ems="10"
        android:fontFamily="@font/carlitoregular"
        android:hint="@string/hint_reg_password_conf"
        android:inputType="textPassword"
        android:padding="@dimen/regBoxesPadding"
        android:textColorHint="#CACFD2"
        android:textSize="@dimen/regTextSize"
        app:layout_constraintBottom_toTopOf="@+id/et_Reg_Telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Reg_Password" />

    <Button
        android:id="@+id/btnReg_send"
        android:layout_width="312dp"
        android:layout_height="47dp"

        android:layout_marginStart="44dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/botonnaranja"
        android:drawableRight="@drawable/flecha"
        android:fontFamily="@font/carlitoregular"
        android:padding="10dp"
        android:text="@string/btn_registro_enviar"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Reg_Telefono" />

    <ImageButton
        android:id="@+id/ib_Selectfoto"
        android:layout_width="59dp"
        android:layout_height="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/camera"
        app:layout_constraintBottom_toTopOf="@+id/btnReg_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_Reg_Telefono"
        app:layout_constraintTop_toBottomOf="@+id/et_Reg_Password_Conf"
        app:layout_constraintVertical_bias="0.523" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="99dp"
        android:layout_height="5dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="269dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/etReg_Nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/linea" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="34dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="49dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoblancosolo" />

</androidx.constraintlayout.widget.ConstraintLayout>