<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".sesion.RegistroFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="254dp"
            android:layout_marginBottom="64dp"
            android:fontFamily="@font/titleslittlesquare"
            android:text="Registo"
            android:textColor="#B7950B"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/regBoxesWidth"
            android:layout_height="@dimen/regBoxesHeight"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/titleslittlesquare"
            android:text="Ingresa los datos que se requieren para darse de alta"
            android:textColor="#717D7E"
            android:textSize="@dimen/regTextSize"
            app:layout_constraintBottom_toTopOf="@+id/etReg_Nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etReg_Apellidos"
            android:layout_width="@dimen/regBoxesWidth"
            android:layout_height="@dimen/regBoxesHeight"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/edittextlogin"
            android:drawableStart="@drawable/user"
            android:ems="10"
            android:fontFamily="@font/titleslittlesquare"
            android:hint="@string/hint_reg_apellidos"
            android:inputType="textPersonName"
            android:padding="@dimen/regBoxesPadding"
            android:textColorHint="#343434"
            android:textSize="@dimen/regTextSize"
            app:layout_constraintBottom_toTopOf="@+id/etReg_Email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_Reg_Telefono"
            android:layout_width="@dimen/regBoxesWidth"
            android:layout_height="@dimen/regBoxesHeight"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="9dp"
            android:background="@drawable/edittextlogin"
            android:drawableStart="@drawable/phone"
            android:ems="10"
            android:fontFamily="@font/titleslittlesquare"
            android:hint="@string/hint_reg_telefono"
            android:inputType="textPersonName"
            android:padding="@dimen/regBoxesPadding"
            android:textColorHint="#343434"
            android:textSize="@dimen/regTextSize"
            app:layout_constraintBottom_toTopOf="@+id/et_Reg_Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/etReg_Nombre"

            android:layout_width="@dimen/regBoxesWidth"
            android:layout_height="@dimen/regBoxesHeight"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittextlogin"
            android:drawableStart="@drawable/user"
            android:ems="10"

            android:fontFamily="@font/titleslittlesquare"
            android:hint="@string/hint_reg_nombre"
            android:inputType="textPersonName"
            android:padding="@dimen/regBoxesPadding"
            android:textColorHint="#343434"
            android:textSize="@dimen/regTextSize"
            app:layout_constraintBottom_toTopOf="@+id/etReg_Apellidos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_Reg_Password"
            android:layout_width="@dimen/regBoxesWidth"
            android:layout_height="@dimen/regBoxesHeight"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittextlogin"
            android:drawableStart="@drawable/lock"
            android:ems="10"
            android:fontFamily="@font/titleslittlesquare"
            android:hint="@string/hint_reg_password"
            android:inputType="textPassword"
            android:padding="@dimen/regBoxesPadding"
            android:textColorHint="#343434"
            android:textSize="@dimen/regTextSize"
            app:layout_constraintBottom_toTopOf="@+id/et_Reg_Password_Conf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etReg_Email"
            android:layout_width="@dimen/regBoxesWidth"
            android:layout_height="@dimen/regBoxesHeight"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="9dp"
            android:background="@drawable/edittextlogin"
            android:drawableStart="@drawable/ic_baseline_local_post_office_24"
            android:ems="10"
            android:fontFamily="@font/titleslittlesquare"
            android:hint="@string/hint_reg_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/regBoxesPadding"
            android:textColorHint="#343434"
            android:textSize="@dimen/regTextSize"
            app:layout_constraintBottom_toTopOf="@+id/et_Reg_Telefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etReg_Direccion"
            android:layout_width="@dimen/regBoxesWidth"
            android:layout_height="@dimen/regBoxesHeight"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/edittextlogin"
            android:drawableStart="@drawable/ic_baseline_local_post_office_24"
            android:ems="10"
            android:fontFamily="@font/titleslittlesquare"
            android:hint="@string/hint_reg_direccion"
            android:inputType="textEmailAddress"
            android:padding="@dimen/regBoxesPadding"
            android:textColorHint="#343434"
            android:textSize="@dimen/regTextSize"
            app:layout_constraintBottom_toTopOf="@+id/et_Reg_Telefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_Reg_Password_Conf"
            android:layout_width="@dimen/regBoxesWidth"
            android:layout_height="@dimen/regBoxesHeight"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="19dp"
            android:background="@drawable/edittextlogin"
            android:drawableStart="@drawable/lock"
            android:ems="10"
            android:fontFamily="@font/titleslittlesquare"
            android:hint="@string/hint_reg_password_conf"
            android:inputType="textPassword"
            android:padding="@dimen/regBoxesPadding"
            android:textColorHint="#343434"
            android:textSize="@dimen/regTextSize"
            app:layout_constraintBottom_toTopOf="@+id/btnReg_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnReg_send"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="210dp"
            android:layout_marginEnd="51dp"

            android:layout_marginBottom="26dp"
            android:background="@drawable/botonnaranja"
            android:drawableRight="@drawable/flecha"
            android:fontFamily="@font/titleslittlesquare"
            android:padding="@dimen/regBoxesPadding"
            android:text="@string/btn_registro_enviar"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/regTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="427dp"
            android:layout_height="106dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/r2" />

        <ImageButton
            android:id="@+id/ib_Selectfoto"
            android:layout_width="89dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnReg_send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Reg_Password_Conf"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>