<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".sesion.LoginActivity">

    <EditText
        android:id="@+id/etLoginCorreo"
        android:layout_width="321dp"
        android:layout_height="60dp"

        android:layout_marginStart="38dp"
        android:layout_marginEnd="52dp"

        android:background="@drawable/edittextlogin"
        android:drawableStart="@drawable/user"

        android:ems="10"
        android:fontFamily="@font/carlitoregular"
        android:hint="@string/hint_ingresar_correo"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="#CACFD2"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />



    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/edittextlogin"
        android:drawableStart="@drawable/lock"
        android:ems="10"
        android:fontFamily="@font/carlitoregular"
        android:hint="@string/hint_ingresar_password"
        android:inputType="textPersonName|textPassword"
        android:padding="20dp"
        android:textColorHint="#CACFD2"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/PasswordReg"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="@+id/etLoginPassword"
        app:layout_constraintEnd_toEndOf="@+id/etLoginPassword"
        app:layout_constraintTop_toTopOf="@+id/etLoginPassword"
        app:layout_constraintVertical_bias="0.516" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/botonnaranja"
        android:drawableRight="@drawable/flecha"
        android:fontFamily="@font/carlitobold"
        android:padding="10dp"
        android:text="@string/btn_iniciar_sesion"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/olvidastec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

    <Button
        android:id="@+id/btnRegistro"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="196dp"
        android:layout_height="38dp"

        android:layout_marginStart="107dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/carlitoregular"
        android:text="@string/btn_registro"
        android:textColor="#979A9A"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/olvidastec" />

    <Button
        android:id="@+id/olvidastec"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="316dp"
        android:layout_height="41dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:fontFamily="@font/carlitoregular"
        android:text="¿Olvidaste tu contraseña?"
        android:textColor="#E59866"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:fontFamily="@font/carlitobold"
        android:text="Ingresa tu contraseña:"
        android:textColor="#979A9A"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/etLoginPassword"
        app:layout_constraintEnd_toStartOf="@+id/etLoginPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginCorreo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="187dp"
        android:fontFamily="@font/carlitobold"
        android:text="Ingresa tu correo electronico:"
        android:textColor="#979A9A"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/etLoginCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="93dp"
        android:layout_height="8dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="278dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/linea" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="287dp"
        android:layout_height="109dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="160dp"
        android:fontFamily="@font/carlitoregular"
        android:text="Bienvenido a Tráeme Food"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="334dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoblancosolo" />
</androidx.constraintlayout.widget.ConstraintLayout>